crates/ferrum-interfaces/tests/ui/vnext/fail/committed_transaction_is_moved_by_handoff.rs
use ferrum_interfaces::vnext::{
    ResourceTransaction, ResourceTransactionDriver, TransactionCommitted,
};

fn handoff_then_release<D>(transaction: ResourceTransaction<D, TransactionCommitted>)
where
    D: ResourceTransactionDriver + 'static,
{
    let _resources = transaction.into_plan_runtime();
    let _released = transaction.release();
}

fn main() {}
